--- a/index.html
+++ b/index.html
@@ -3,21 +3,15 @@
 <head>
   <title> Project 1 - The Weeknd : Chayoung </title>
   <meta charset="utf-8">
-</head>
+   <link rel="stylesheet" href="style2.css">
+ </head>
 
 <body bgcolor="black">
-<p>
-
-<div style="text-align:center">
-  <h1 style="margin-top:80px;"><span style="color:white"> "Hello The Weeknd" </span></h1>
-</div>
-
-  <h1 style="margin:150px 200px 50px 580px;"> <a href="index2.html" title="introduction page"> <span style="color:white;"> Let me know you who's The Weeknd!</span></a></h1>
-<div style="text-align : center;">
-<img src="the weeknd from google.jpg">
-</div>
-
-</p>
+ <h1>"Hello The Weeknd"</h1>
+  <h2><a href="index2.html" title="introduction page">Let me know you who's The Weeknd!</a></h2>
+   <div id="image">
+    <img src="the weeknd from google.jpg">
+   </div>
 
 </body>
 </html>
