--- a/intro2.html
+++ b/intro2.html
@@ -3,48 +3,30 @@
 <head>
   <title> Project 1 - The Weeknd : Chayoung </title>
   <meta charset="utf-8">
-
+ <link rel="stylesheet" href="style5.css">
 </head>
 
 <body>
-  <style>
-    body{
-      background-color:#F5F5F5;
-      background-image:url(https://i.pinimg.com/originals/5b/44/0b/5b440bb082e5a299c60170b07f8a5d5b.png);
-      background-repeat:no-repeat;
-      background-size:220px 220px;
-      background-position:right bottom;
-      background-attachment:fixed;*/
-    }
-  </style>
-
-  <p>
-    <div style="text-align:center">
-      <span style="color:black">
-      <h1 style="margin-top:80px;"><a href="intro1.html"><span style="color:black">The Weeknd</span></h1>
-      <h1><a href="intro2.html"><span style="color:black">Career</span></h1>
-      <h1><a href="intro3.html"><span style="color:black">Comment on this website</span></a></h1>
-
-</div>
-
- <p style="margin-top:100px;">
-   <div style="text-align:center">
-     <span style="
-     font-style:italic;
-     font-size:25px;
-     font-weight:bold;">
-     <p>2012–2014: Trilogy and Kiss Land</p>
-       <p><img src="trilogy.jpg">
-         <img src="kiss land.jpg"></p>
-     <p>2015: Beauty Behind the Madness</p>
-       <p><img src="beauty behind.jpg"></p>
-     <p>2016–2018: Starboy and My Dear Melancholy</p>
-       <p><img src="starboy.jpg">
-         <img src="my dear.jpg"></p>
-     <p>2019–present: After Hours and Super Bowl LV half-time performance</p>
-       <p><img src="after hours.jpg">
-         <img src="super bowl.jpg"></p>
-</span>
-
+  <h1><a href="index2.html">Let me know you who's The Weeknd</a></h1>
+  <div id="grid">
+    <ol>
+      <li><h1><a href="intro1.html">The Weeknd</a></h1></li>
+      <li><h1><a href="intro2.html">Career</a></h1></li>
+      <li><h1><a href="intro3.html">Comment on this website</a></h1></li>
+    </ol>
+  <div id="article">
+    <h2>2012–2014: Trilogy and Kiss Land</h2>
+      <img src="trilogy.jpg">
+      <img src="kiss land.jpg">
+     <h2>2015: Beauty Behind the Madness</h2>
+      <img src="beauty behind.jpg">
+    <h2> 2016–2018: Starboy and My Dear Melancholy</h2>
+      <img src="starboy.jpg">
+      <img src="my dear.jpg">
+     <h2>2019–present: After Hours and Super Bowl LV half-time performance</h2>
+        <img src="after hours.jpg">
+        <img src="super bowl.jpg">
+     </div>
+   </div>
 </body>
 </html>
