--- a/index2.html
+++ b/index2.html
@@ -3,39 +3,18 @@
 <head>
   <title> Project 1 - The Weeknd : Chayoung </title>
   <meta charset="utf-8">
-</head>
+   <link rel="stylesheet" href="style3.css">
+ </head>
 
-<body>
-<p>
-  <style>
-    body{
-      background-color:##F5F5F5;
-      background-image:url(https://i.pinimg.com/originals/5b/44/0b/5b440bb082e5a299c60170b07f8a5d5b.png);
-      background-repeat:no-repeat;
-      background-size:220px 220px;
-      background-position:right bottom;
-      background-attachment:fixed;*/
-    }
-  </style>
+ <body>
+   <div id="list">
+      <h1><a href="intro1.html">The Weeknd</h1>
+      <h1><a href="intro2.html">Career</h1>
+      <h1><a href="intro3.html">Comment on this website</h1>
+     <div id="video">
+       <iframe width="777" height="437" src="https://www.youtube.com/embed/KEI4qSrkPAs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+     </div>
+   </div>
 
-
-
-    <div style="text-align:center">
-      <span style="color:black">
-      <h1 style="margin-top:80px;"><a href="intro1.html"><span style="color:black">The Weeknd</span></h1>
-      <h1><a href="intro2.html"><span style="color:black">Career</span></h1>
-      <h1><a href="intro3.html"><span style="color:black">Comment on this website</span></h1>
-
-</div>
-</p>
-
-<p>
-
-<div style="text-align:center">
-<br><iframe width="777" height="437" src="https://www.youtube.com/embed/KEI4qSrkPAs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></br>
-</div>
-
-</p>
-
-</body>
-</html>
+  </body>
+  </html>
