--- a/intro3.html
+++ b/intro3.html
@@ -3,30 +3,19 @@
 <head>
   <title> Project 1 - The Weeknd : Chayoung </title>
   <meta charset="utf-8">
-
+  <link rel="stylesheet" href="style6.css">
 </head>
 
 <body>
-  <style>
-    body{
-      background-color:#F5F5F5;
-      background-image:url(https://i.pinimg.com/originals/5b/44/0b/5b440bb082e5a299c60170b07f8a5d5b.png);
-      background-repeat:no-repeat;
-      background-size:220px 220px;
-      background-position:right bottom;
-      background-attachment:fixed;*/
-    }
-  </style>
+   <h1><a href="index2.html">Let me know you who's The Weeknd</a></h1>
+   <div id="grid">
+     <ol>
+      <li><h1><a href="intro1.html">The Weeknd</a></h1></li>
+      <li><h1><a href="intro2.html">Career</a></h1></li>
+      <li><h1><a href="intro3.html">Comment on this website</a></h1></li>
+    </ol>
 
-  <p>
-    <div style="text-align:center">
-      <span style="color:black">
-      <h1 style="margin-top:80px;"><a href="intro1.html"><span style="color:black">The Weeknd</span></h1>
-      <h1><a href="intro2.html"><span style="color:black">Career</span></h1>
-      <h1><a href="intro3.html"><span style="color:black">Comment on this website</span></a></h1>
 
-</div>
-<p style="margin-top:80px">
   <div id="lv-container" data-id="city" data-uid="MTAyMC81Mjc2Ni8yOTI0Mw==">
   <script type="text/javascript">
      (function(d, s) {
@@ -43,7 +32,7 @@
   </script>
   <noscript>라이브리 댓글 작성을 위해 JavaScript를 활성화 해주세요</noscript>
   </div>
-
+</div>
 
   <!--Start of Tawk.to Script-->
 <script type="text/javascript">
